--- a/Example/SwiftXML.xcodeproj/xcshareddata/xcschemes/SwiftXML-Example.xcscheme
+++ b/Example/SwiftXML.xcodeproj/xcshareddata/xcschemes/SwiftXML-Example.xcscheme
@@ -25,7 +25,7 @@
             buildForRunning = "YES"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACE41AFB9204008FA782"
